src/snapshots/cargo_vet__tests__mock-complex-full-audited.snap
---
source: src/tests.rs
assertion_line: 1426
expression: stdout
---
Vetting Succeeded (4 fully audited)

