src/snapshots/cargo_vet__tests__mock-complex-inited.snap
---
source: src/tests.rs
assertion_line: 1400
expression: stdout
---
Vetting Succeeded (4 unaudited)

