src/snapshots/cargo_vet__tests__mock-complex-missing-core10.snap
---
source: src/tests.rs
assertion_line: 1324
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-core:10.0.0 missing ["reviewed"]

recommended audits:
    third-core:10.0.0 5.0.0 -> 10.0.0 (+75) for ["reviewed"]

Use |cargo vet certify| to record the audits.

