src/snapshots/cargo_vet__tests__mock-complex-missing-core5.snap
---
source: src/tests.rs
assertion_line: 1259
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-core:5.0.0 missing ["reviewed", "weak-reviewed"]

dependency tree:
  rootA:10.0.0
    firstA:10.0.0
      third-core:5.0.0 needs ["reviewed", "weak-reviewed"]
Use |cargo vet certify| to record the audits.
recommended audits:
    third-core:5.0.0  0.0.0 -> 5.0.0 (+25) for ["reviewed", "weak-reviewed"]


