src/snapshots/cargo_vet__tests__mock-simple-delta-to-full-audit-overshoot.snap
---
source: src/tests.rs
assertion_line: 879
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["reviewed", "weak-reviewed"]

dependency tree:
  root-package:10.0.0
    first-party:10.0.0
      third-party1:10.0.0 needs ["reviewed", "weak-reviewed"]
Use |cargo vet certify| to record the audits.
recommended audits:
    third-party1:10.0.0  0.0.0 -> 3.0.0 (+9) for ["reviewed", "weak-reviewed"]


