src/snapshots/cargo_vet__tests__mock-simple-delta-to-full-audit-too-weak.snap
---
source: src/tests.rs
assertion_line: 1244
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["reviewed"]

recommended audits:
    third-party1:(5.0.0 -> 10.0.0) for reviewed (+75) (used by first-party) 

Use |cargo vet certify| to record the audits.

