src/snapshots/cargo_vet__tests__mock-simple-delta-to-full-audit.snap
---
source: src/tests.rs
assertion_line: 1127
expression: stdout
---
Vetting Succeeded (3 fully audited)

