src/snapshots/cargo_vet__tests__mock-simple-delta-to-unaudited-overshoot.snap
---
source: src/tests.rs
assertion_line: 955
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["reviewed"]

recommended audits:
    third-party1:3.0.0  for reviewed  (9 lines)  (used by first-party) 

Use |cargo vet certify| to record the audits.

